DTSPB-44434 Fix test